Update and rename error.html to loggedin.html

--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}Error{% endblock %}
+{% block title %}Logged In{% endblock %}
 
 {% block content %}
-  <p>{{ error }}</p>
+  <p>{{ message }}</p>
 
 
 {% endblock %}
