Update and rename loggedin.html to message.html

--- a/templates/message.html
+++ b/templates/message.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Logged In{% endblock %}
+{% block title %}Message{% endblock %}
 
 {% block content %}
   <p>{{ message }}</p>
