--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/page1">Page 1</a></li>
-        <li><a href="page2">Page 2</a></li>
+        <li><a href="/page2">Page 2</a></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
